Created the vercel.json

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,23 +1,60 @@
-# Pimlico (ERC-4337 bundler/paymaster)
-PIMLICO_API_KEY=
+# ── Network toggle ────────────────────────────────────────────────────────────
+# Change this ONE value to switch between testnet and mainnet. Zero other changes.
+NETWORK=testnet
 
-# RPC URLs
+# ── RPC URLs ──────────────────────────────────────────────────────────────────
+# Testnet
+RPC_URL_ETHEREUM_SEPOLIA=
+RPC_URL_BASE_SEPOLIA=
+
+# Mainnet (only needed when NETWORK=mainnet)
 RPC_URL_ETHEREUM=
 RPC_URL_BASE=
-RPC_URL_POLYGON=
 RPC_URL_ARC=
 
-# Relayer private key (EOA that signs session keys / fallback txs)
+# ── Pimlico (ERC-4337 bundler) ────────────────────────────────────────────────
+# Free tier: https://dashboard.pimlico.io
+PIMLICO_API_KEY=
+
+# ── Circle Gateway ────────────────────────────────────────────────────────────
+# Get from Circle Developer Console: https://console.circle.com
+CIRCLE_API_KEY=
+# Required for Developer-Controlled Wallets (deposit + BurnIntent signing via HSM)
+CIRCLE_ENTITY_SECRET=
+# Optional: wallet set ID for Circle gateway wallets.
+# Leave blank on first run — a new wallet set is auto-created and logged.
+# Copy the logged ID here so wallets are reused across restarts.
+CIRCLE_WALLET_SET_ID=
+
+# ── 1inch Swap API (mainnet only) ─────────────────────────────────────────────
+# Free API key: https://portal.1inch.dev
+ONEINCH_API_KEY=
+
+# ── Session key encryption ────────────────────────────────────────────────────
+# REQUIRED. Generate with:
+#   node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_ENCRYPTION_KEY=
+
+# ── Payment link signing ──────────────────────────────────────────────────────
+# REQUIRED. Any long random string. Used to HMAC-sign payment links.
+LINK_SECRET=
+
+# ── Deployer / relayer wallet ─────────────────────────────────────────────────
+# Private key of the wallet used to deploy PaymentRouter and pay Arc Testnet gas.
+# Fund this address with testnet USDC from the Arc faucet before deploying.
 PRIVATE_KEY_RELAYER=
 
-# USDC contract addresses per chain
-USDC_ADDRESS_BASE=
-USDC_ADDRESS_POLYGON=
-USDC_ADDRESS_ETHEREUM=
+# ── Gateway gas funder ────────────────────────────────────────────────────────
+# No longer required — Circle Developer-Controlled Wallets handles gas for deposits.
+# (Previously used to fund session key EOAs with Base Sepolia ETH for direct txs.)
+# Only needed if falling back to the raw EOA deposit path.
+BACKEND_GAS_FUNDER_PRIVATE_KEY=
 
-# CCTP TokenMessenger contract addresses per chain
-CCTP_CONTRACT_BASE=
-CCTP_CONTRACT_POLYGON=
+# ── Deployed contract ─────────────────────────────────────────────────────────
+# Filled in after deploying PaymentRouter to Arc testnet:
+#   cd contracts && npx hardhat run scripts/deploy.js --network arc-testnet
+PAYMENT_ROUTER_ADDRESS=
 
-# Session key TTL in seconds (e.g. 86400 = 24h)
-SESSION_KEY_EXPIRY=86400
+# ── App URLs ──────────────────────────────────────────────────────────────────
+APP_URL=http://localhost:5173
+PORT=3001
