--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.21",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "viem": "^2.46.3",
+    "vite-plugin-pwa": "^1.2.0",
     "wagmi": "^2.19.5"
   },
   "devDependencies": {
