Created and modified the backend for the vercel deployement

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -55,6 +55,10 @@ BACKEND_GAS_FUNDER_PRIVATE_KEY=
 #   cd contracts && npx hardhat run scripts/deploy.js --network arc-testnet
 PAYMENT_ROUTER_ADDRESS=
 
+# ── Database (production / Vercel) ─────────────────────────────────────────────
+# Required for Vercel. Use Supabase "Session" pooler URL (not Direct).
+# DATABASE_URL=postgresql://...
+
 # ── App URLs ──────────────────────────────────────────────────────────────────
 APP_URL=http://localhost:5173
 PORT=3001
