--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,17 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "@circle-fin/adapter-viem-v2": "^1.5.0",
+    "@circle-fin/bridge-kit": "^1.6.0",
+    "@circle-fin/developer-controlled-wallets": "^10.1.0",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "permissionless": "^0.2.30",
+    "pg": "^8.19.0",
+    "qrcode": "^1.5.4",
     "viem": "^2.21.0"
   }
 }
